# bzlmod

./: BUILD.bazel  MODULE.bazel  bazel-bin  bazel-bzlmod_repro  bazel-out  bazel-testlogs  go.mod  go.sum
client/: BUILD.bazel  client.go
proto/echo/: BUILD.bazel
server/: BUILD.bazel  server.go
tools/: bazel
