load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "client_lib",
    srcs = ["client.go"],
    importpath = "home.tech/client",
    visibility = ["//visibility:private"],
    deps = [
        "//proto/echo:echo_go_proto",
#        "@com_github_google_uuid//:go_default_library", 
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "client",
    embed = [":client_lib"],
    visibility = ["//visibility:public"],
)
