load("@protobuf//bazel:proto_library.bzl", "proto_library")
load("@rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "echo_proto",
    srcs = ["echo.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "echo_go_proto",
    importpath = "home.tech/proto/echo",
    proto = ":echo_proto",
    compilers = ["@rules_go//proto:go_grpc"],
    visibility = ["//visibility:public"],
#    deps = ["@com_github_grpc_grpc_go//:go_default_library"],
)
